Prepend http:// to normalize.css line

--- a/stage1.html
+++ b/stage1.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<title>Taggin' and You:  HTML as Graffiti, Art:  An Exploration of 90's America and Basic Web Design</title>
-		<link rel="stylesheet" href="normalize-css.googlecode.com/svn/trunk/normalize.css">
+		<link rel="stylesheet" href="http://normalize-css.googlecode.com/svn/trunk/normalize.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/main.css">
 
